# ccm

./: .gitignore  CMakeLists.txt  README.md  algorithm_description.md
py_src/: analyze_significance.py  ccm.py  ccm_analyse.py  ce_ccm.py  ce_ccm_analyse.py  plot_heatmap_demo.py  test_ccm.py  test_ce_ccm.py
src/: .ccmth.cpp.swp  ccmth.cpp  ccmth.h  get_data_from_bxArray.cpp  get_data_from_bxArray.h  main.cpp  set_data_to_bxArray.cpp  set_data_to_bxArray.h
